--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 resources/**/* filter=lfs diff=lfs merge=lfs -text
+user_dir/data/Dataset.zip filter=lfs diff=lfs merge=lfs -text
 resources/models/pretrained_model/ssd_resnet50_v1_fpn/saved_model/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
 resources/Dataset.zip filter=lfs diff=lfs merge=lfs -text
 resources/models/pretrained_model/ssd_resnet50_v1_fpn/checkpoint/ckpt-0.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
