--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ user_dir/data/Dataset.zip filter=lfs diff=lfs merge=lfs -text
 resources/models/pretrained_model/ssd_resnet50_v1_fpn/saved_model/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
 resources/Dataset.zip filter=lfs diff=lfs merge=lfs -text
 resources/models/pretrained_model/ssd_resnet50_v1_fpn/checkpoint/ckpt-0.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+user_dir/exported_models/example_session/model.zip filter=lfs diff=lfs merge=lfs -text
